# Adventure

./: .gitignore  Adventure++.sln  Adventure.mdj  CMakeLists.txt  JOGO_UML.mdj  README.md
Adventure++/: Adventure++.cpp  Adventure++.vcxproj  Adventure++.vcxproj.filters  Andaime.cpp  Andaime.h  Animacao.cpp  Animacao.h  AnimacaoEstatica.cpp  AnimacaoEstatica.h  AnimacaoMovimento.cpp  AnimacaoMovimento.h  Animagus.cpp  Animagus.h  AtiraEsqueleto.cpp  AtiraEsqueleto.h  AtiraGoblin.cpp  AtiraGoblin.h  Atirador.cpp  Atirador.h  BateEsqueleto.cpp  BateEsqueleto.h  BateGoblin.cpp  BateGoblin.h  Botao.cpp  Botao.h  Caixa.cpp  Caixa.h  Chefao.cpp  Chefao.h  Ente.cpp  Ente.h  Entidade.cpp  Entidade.h  EntidadeEstatica.cpp  EntidadeEstatica.h  EntidadeMovimento.cpp  EntidadeMovimento.h  Espinhos.cpp  Espinhos.h  Esqueleto.cpp  (+62 more)
Adventure++/Debug/: Adventure++.exe.recipe  Adventure++.ilk  vc143.idb
Adventure++/fonte/: Open Font License FAQ.markdown
Adventure++/mapa/: mapaFloresta.txt
Diagrama/: JOGO_UML.mdj
include/: Animacao.h  AnimacaoEstatica.h  AnimacaoMovimento.h  Animagus.h  AtiraEsqueleto.h  AtiraGoblin.h  BateEsqueleto.h  Botao.h  Caixa.h  Coordenada.h  Elemento.h  Ente.h  Entidade.h  EntidadeEstatica.h  EntidadeMovimento.h  Espinhos.h  Esqueleto.h  Estado.h  Fase.h  FaseCaverna.h  FaseFloresta.h  Fundo.h  GerenciadorEvento.h  GerenciadorGrafico.h  Goblin.h  Hideo.h  Ids.h  Inimigo.h  Jogador.h  LinhaAnimacao.h  LinhaAnimacaoMovimento.h  Lista.h  ListaEntidade.h  MaquinaEstados.h  Menu.h  MenuJogadores.h  MenuPausa.h  MenuPrincipal.h  Noturno.h  Obstaculo.h  (+8 more)
(+10 files in other folders)
